# pandocreek

./: .gitignore  Makefile  README.md  about.html  archives.html  authors.html  beam-search.html  categories.html  index.html  my-first-review.html  pelicanconf.py  publishconf.py  pyproject.toml  tags.html
author/: nacho-esmite.html
category/: about.html  neural-networks.html  review.html
content/: about.md  first.md
content/nn/: beam-search.md
draws/: beam_search.excalidraw
feeds/: about.atom.xml  all.atom.xml  neural-networks.atom.xml  review.atom.xml
output/: CNAME
themes/notmyidea/templates/: base.html
